force-app/main/default/objects/Marketing_Expense__c/Marketing_Expense__c.object-meta.xml
<CustomObject>
    <description>Ties expenses and costs with Campaigns and Events</description>
    <label>Marketing Expense</label>
    <nameField>
        <displayFormat>CEE-{000000}</displayFormat>
        <label>Marketing Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>