force-app/main/default/objects/Marketing_Expense__c/fields/Campaign_Event__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Event__c</fullName>
    <description>Ties the Marketing Expense to the Campaign/Event</description>
    <label>Campaign/Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Marketing Expenses</relationshipLabel>
    <relationshipName>Marketing_Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>