force-app/main/default/objects/Marketing_Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <description>Identifies the type of expense</description>
    <label>Expense Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Expense_Types</valueSetName>
    </valueSet>
</CustomField>