force-app/main/default/objects/Marketing_Expense__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>Text-field to provide notes regarding the expense</description>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>